// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Footer test testing action click 1`] = `
<FormFooter
  actions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "action1",
      },
      Object {
        "execute": [MockFunction],
        "name": "action2",
      },
    ]
  }
>
  <ActionGroup>
    <div
      className="pf-c-form__group pf-m-action"
    >
      <div
        className="pf-c-form__actions"
      >
        <Component
          key="submit-action1"
          onClick={[Function]}
          type="submit"
          variant="primary"
        >
          <ComponentWithOuia
            component={[Function]}
            componentProps={
              Object {
                "children": "Action1",
                "onClick": [Function],
                "type": "submit",
                "variant": "primary",
              }
            }
            consumerContext={null}
          >
            <Button
              onClick={[Function]}
              ouiaContext={
                Object {
                  "isOuia": false,
                  "ouiaId": null,
                }
              }
              type="submit"
              variant="primary"
            >
              <button
                aria-disabled={null}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={null}
                type="submit"
              >
                Action1
              </button>
            </Button>
          </ComponentWithOuia>
        </Component>
        <Component
          key="submit-action2"
          onClick={[Function]}
          type="submit"
          variant="primary"
        >
          <ComponentWithOuia
            component={[Function]}
            componentProps={
              Object {
                "children": "Action2",
                "onClick": [Function],
                "type": "submit",
                "variant": "primary",
              }
            }
            consumerContext={null}
          >
            <Button
              onClick={[Function]}
              ouiaContext={
                Object {
                  "isOuia": false,
                  "ouiaId": null,
                }
              }
              type="submit"
              variant="primary"
            >
              <button
                aria-disabled={null}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={null}
                type="submit"
              >
                Action2
              </button>
            </Button>
          </ComponentWithOuia>
        </Component>
      </div>
    </div>
  </ActionGroup>
</FormFooter>
`;

exports[`Form Footer test testing showing actions 1`] = `
<FormFooter
  actions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "action1",
        "primary": true,
      },
      Object {
        "execute": [MockFunction],
        "name": "action2",
      },
    ]
  }
>
  <ActionGroup>
    <div
      className="pf-c-form__group pf-m-action"
    >
      <div
        className="pf-c-form__actions"
      >
        <Component
          key="submit-action1"
          onClick={[Function]}
          type="submit"
          variant="primary"
        >
          <ComponentWithOuia
            component={[Function]}
            componentProps={
              Object {
                "children": "Action1",
                "onClick": [Function],
                "type": "submit",
                "variant": "primary",
              }
            }
            consumerContext={null}
          >
            <Button
              onClick={[Function]}
              ouiaContext={
                Object {
                  "isOuia": false,
                  "ouiaId": null,
                }
              }
              type="submit"
              variant="primary"
            >
              <button
                aria-disabled={null}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={null}
                type="submit"
              >
                Action1
              </button>
            </Button>
          </ComponentWithOuia>
        </Component>
        <Component
          key="submit-action2"
          onClick={[Function]}
          type="submit"
          variant="primary"
        >
          <ComponentWithOuia
            component={[Function]}
            componentProps={
              Object {
                "children": "Action2",
                "onClick": [Function],
                "type": "submit",
                "variant": "primary",
              }
            }
            consumerContext={null}
          >
            <Button
              onClick={[Function]}
              ouiaContext={
                Object {
                  "isOuia": false,
                  "ouiaId": null,
                }
              }
              type="submit"
              variant="primary"
            >
              <button
                aria-disabled={null}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={null}
                type="submit"
              >
                Action2
              </button>
            </Button>
          </ComponentWithOuia>
        </Component>
      </div>
    </div>
  </ActionGroup>
</FormFooter>
`;

exports[`Form Footer test testing showing empty actions 1`] = `
<FormFooter
  actions={Array []}
/>
`;

exports[`Form Footer test testing showing no actions 1`] = `<FormFooter />`;
